# pyPsupertime

./: CITATION.cff  README.md  pyproject.toml  requirements.in  requirements.txt
src/pypsupertime/: __init__.py  model.py  parameter_search.py  plots.py  preprocessing.py  psupertime.py
