[project]
name = "pypsupertime"
dynamic = ["version", "dependencies"]
authors = [
  { name="Julian Flesch", email="julian.flesch@student.uni-tuebingen.de" },
]
description = "PyPsupertime"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "pypsupertime.__version__"}
dependencies = {file = ["requirements.in"]}

[project.urls]
"Source" = "https://github.com/claassenlab/PyPsupertime"
"Bug Tracker" = "https://github.com/claassenlab/pyPsupertime/issues"
"API Documentation" = "https://pypsupertime.readthedocs.io/en/latest/"

